# brainrot-quant

./: .env.example  .gitignore  AGENTS.md  README.md  api-key.py  pyproject.toml  run_backtest.py  run_live.py
.github/workflows/: daily_trade.yml
history/: runs_live.jsonl  runs_paper.jsonl
semantic_trading/: backtest.py  clustering.py  config.py  data.py  discovery.py  execute.py  exposure.py  history.py  labeling.py  notify.py  run_digest.py  types.py
