[project]
name = "semantic-trading"
version = "0.1.0"
description = "Semantic Trading: Agentic AI for Clustering and Relationship Discovery in Prediction Markets"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30",
    "py-clob-client>=0.34",
    "scikit-learn>=1.5",
    "pydantic>=2.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.scripts]
backtest = "run_backtest:main"
live = "run_live:main"
